fixup! Add TorStrings module for localization
Marked tor_controlconn_failed as a 12.5-only

--- a/toolkit/torbutton/chrome/locale/en-US/torlauncher.properties
+++ b/toolkit/torbutton/chrome/locale/en-US/torlauncher.properties
@@ -9,7 +9,6 @@ torlauncher.tor_exited_during_startup=Tor exited during startup. This might be d
 torlauncher.tor_exited=Tor unexpectedly exited. This might be due to a bug in Tor itself, another program on your system, or faulty hardware. Until you restart Tor, Tor Browser will not be able to reach any websites. If the problem persists, please send a copy of your Tor Log to the support team.
 torlauncher.tor_exited2=Restarting Tor will not close your browser tabs.
 torlauncher.restart_tor=Restart Tor
-torlauncher.tor_controlconn_failed=Could not connect to Tor control port.
 torlauncher.tor_bootstrap_failed=Tor failed to establish a Tor network connection.
 torlauncher.tor_bootstrap_failed_details=%1$S failed (%2$S).
 
@@ -60,3 +59,7 @@ torlauncher.bootstrapWarning.pt_missing=missing pluggable transport
 torlauncher.nsresult.NS_ERROR_NET_RESET=The connection to the server was lost.
 torlauncher.nsresult.NS_ERROR_CONNECTION_REFUSED=Could not connect to the server.
 torlauncher.nsresult.NS_ERROR_PROXY_CONNECTION_REFUSED=Could not connect to the proxy.
+
+## 12.5-only strings that can be removed once it goes EOL.
+
+torlauncher.tor_controlconn_failed=Could not connect to Tor control port.
